refactor(rent-service): changed to new java features